--- a/README
+++ b/README
@@ -13,66 +13,64 @@ The incident began around **8:48 AM SAST on 20-October-25** and was fully resolv
 Although the root defect was small, it triggered a cascade affecting dozens of dependent services and hundreds of high-traffic applications globally—demonstrating how subtle automation issues in large distributed systems can ripple across the internet.
 
 
-# Timeline (PDT)
+# Timeline (SAST)
 
- Time  Event 
+Time-Event:
 
-| **11:48 PM (Oct 19)** | Increased error rates and latency across several AWS services in US-EAST-1. |
-| **12:26 AM** | Root cause identified as DNS resolution failures for DynamoDB regional endpoints. |
-| **2:24 AM** | AWS mitigated the DNS issue and began restoring service. |
-| **6:01 PM** | AWS declared all services fully operational. |
+8:48 AM (Oct 20) Increased error rates and latency across several AWS services in US-EAST-1.
+9:26 AM (Oct 20) Root cause identified as DNS resolution failures for DynamoDB regional endpoints.
+11:24 AM (Oct 20) AWS mitigated the DNS issue and began restoring service.
+3:01 AM (Oct 21) AWS declared all services fully operational.
+
 
 Sources: [AWS Status Page](https://status.aws.amazon.com/), The Register, Wired, TechCrunch, Engadget.
 
 # Root Cause (Simplified)
 
 AWS operates an automated system to manage DNS records for regional service endpoints.  
-Two internal components — **Planner** and **Enactor** — coordinate updates to DNS entries.
+Two internal components *Planner* and *Enactor* coordinate updates to DNS entries.
 
-A **race condition** occurred between two Enactor processes:
+A *race condition* occurred between two Enactor processes:
 - Enactor A was processing an older plan.
 - Enactor B completed a newer plan and cleaned up the “stale” one.
 - During cleanup, all IP address records for the regional DynamoDB endpoint were accidentally deleted.
 
-Result → DNS returned **no IPs** for DynamoDB → clients couldn’t connect → dependent services failed.
+Result → DNS returned *NO IPs* for DynamoDB → clients couldn’t connect → dependent services failed.
 
 
-## Cascading Impact
+# Cascading Impact
 
-- **Directly affected:** DynamoDB API in US-EAST-1.  
-- **Downstream impact:** EC2 launches, Lambda functions, Load Balancer health checks, and internal AWS control planes.  
-- **External impact:** Major consumer apps (e.g., Snapchat, Signal, Fortnite, Venmo, Alexa, and several financial/banking platforms) went offline temporarily.
+- *Directly affected:* DynamoDB API in US-EAST-1.  
+- *Downstream impact:* EC2 launches, Lambda functions, Load Balancer health checks, and internal AWS control planes.  
+- *External impact:* Major consumer apps (e.g., Snapchat, Signal, Fortnite, Venmo, Alexa, and several financial/banking platforms)  went offline temporarily.
 
 
-## Key Technical Lessons
+# Key Technical Lessons
 
-1. **DNS is a single point of failure if not carefully isolated.**  
+1. *DNS is a single point of failure if not carefully isolated.* 
    Even small defects in automated DNS management can cut off critical APIs.
 
-2. **Region dependency magnifies outages.**  
+2. *Region dependency magnifies outages.* 
    Many AWS control-planes rely heavily on US-EAST-1 — more independence between regions could limit the blast radius.
 
-3. **Automation needs guardrails.**  
+3. *Automation needs guardrails.*  
    The “cleanup” process that deleted valid DNS records should have validation checks and rollback logic.
 
-4. **Resilient architectures matter.**  
+4. *Resilient architectures matter.* 
    Applications should use retries, exponential back-off, and multi-region failover for critical dependencies.
 
-5. **Observability is key.**  
+5. *Observability is key.* 
    Quick detection of abnormal DNS responses could reduce recovery time.
-
-
 
 # Example Mitigation Strategies
 
-| Strategy | Description |
+ Strategy | Description:-
 
-| **DNS Health Checks** | Validate endpoint availability before record changes are deployed. |
-| **Versioned DNS Plans** | Use versioned or transactional updates to prevent race-condition cleanups. |
-| **Multi-Region Fallback** | Deploy read replicas or backup control-planes in separate regions. |
-| **Synthetic Monitoring** | Continuous testing of internal and external DNS resolution paths. |
+ *DNS Health Checks* Validate endpoint availability before record changes are deployed. 
+  *Versioned DNS Plans**  Use versioned or transactional updates to prevent race-condition cleanups. 
+  *Multi-Region Fallback*  Deploy read replicas or backup control-planes in separate regions.  *Synthetic Monitoring*  Continuous testing of internal and external DNS resolution paths. 
 
----
+----------------------------
 
 # Small Diagram — Simplified Failure Chain
      text
